--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Some text..." />
-    <title>Simply Chocolate</title>
+    <title>Studio</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="./images/icons/logo.svg" type="image/svg" />
 </head>
@@ -15,41 +15,32 @@
     <header id="home">
         <nav>
             <a href="">
-                <span>SIMPLY</span> CHOCOLATE
-                <img src="./images/icons/logo.svg" alt="Simply Chocolate logo" />
+                <span>WEB</span>STUDIO
             </a>
             <ul>
                 <li>
-                    <a href="#home">Home</a>
+                    <a href="#studio">Studio</a>
                 </li>
                 <li>
-                    <a href="#made">How it’s made?</a>
+                    <a href="#portfolio">Portfolio</a>
                 </li>
                 <li>
-                    <a href="#reviews">Chocolate is loved</a>
+                    <a href="#contacts">Contacts</a>
                 </li>
             </ul>
         </nav>
-        <ul>
-            <li>
-                <a href="https://facebook.com" target="_blank" rel="noopener noreferrer" aria-label="Facebook link">
-                    <img src="./images/icons/facebook.svg" alt="facebook icon" width="24" height="24" />
-                </a>
-            </li>
-            <li>
-                <a href="https://instagram.com" target="_blank" rel="noopener noreferrer" aria-label="Instagram link">
-                    <img src="./images/icons/instagram.svg" alt="instagram icon" width="24" height="24" />
-                </a>
-            </li>
-            <li>
-                <a href="https://twitter.com" target="_blank" rel="noopener noreferrer" aria-label="Twitter link">
-                    <img src="./images/icons/twitter.svg" alt="twitter icon" width="24" height="24" />
-                </a>
-            </li>
-        </ul>
+        <address>
+            <ul>
+                <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                </li>
+            </ul>
+        </address>
     </header>
-    <main>
-        <!-- Hero section -->
+    <main>        <!-- Hero section -->
         <section>
             <h1>
                 Treat yourself or a loved one to our finest ingredients for a moment of pure delight!
@@ -61,7 +52,7 @@
                 <img src="./images/icons/arrow.svg" alt="Arrow down" width="22" height="22" />
             </button>
         </section>
-        <!--  Benefits section -->
+        <!--  Section 1 -->
         <section>
             <h2>Benefits of our chocolate</h2>
             <ul>
@@ -92,7 +83,7 @@
                 </li>
             </ul>
         </section>
-        <!-- Ingridients section -->
+        <!-- Section 2 -->
         <section>
             <h2>It all adds up to one exceptional <span>taste</span> sensation</h2>
             <ul>
@@ -126,7 +117,7 @@
                 </li>
             </ul>
         </section>
-        <!-- Made section -->
+        <!-- Section 3 -->
         <section id="made">
             <h2>How it’s <span>made</span>?</h2>
             <img src="./images/made/img.jpg" alt="Chocolate making process" widht="600" height="400" />
@@ -253,48 +244,10 @@
     </main>
     <!-- Footer -->
     <footer>
-        <p>Chocolate a delicious cure for a bad day</p>
-        <address>
-            <p>Social networks</p>
-            <ul>
-                <li>
-                    <a href="https://instagram.com" target="_blank" rel="noopener noreferrer"
-                        aria-label="Instagram icon">
-                        <img src="./images/icons/instagram-network.svg" alt="Instagram icon" width="24" height="24" />
-                    </a>
-                </li>
-                <li>
-                    <a href="https://facebook.com" target="_blank" rel="noopener noreferrer" aria-label="Facebook icon">
-                        <img src="./images/icons/facebook-network.svg" alt="Facebook icon" width="24" height="24" />
-                    </a>
-                </li>
-                <li>
-                    <a href="https://twitter.com" target="_blank" rel="noopener noreferrer" aria-label="Twitter icon">
-                        <img src="./images/icons/twitter-network.svg" alt="Twitter icon" width="24" height="24" />
-                    </a>
-                </li>
-            </ul>
-            <p>Contact us</p>
-            <ul>
-                <li>
-                    <a href="tel:380684439426">+380 (68) 443-94-26</a>
-                </li>
-                <li>
-                    <a href="mailto:simplychoc@gmail.com">simplychoc@gmail.com</a>
-                </li>
-            </ul>
-        </address>
-        <ul>
-            <li>
-                <a href="#home">Home</a>
-            </li>
-            <li>
-                <a href="#made">How it’s made?</a>
-            </li>
-            <li>
-                <a href="#reviews">Chocolate is loved</a>
-            </li>
-        </ul>
+        <a href="">
+            <span>WEB</span>STUDIO
+        </a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 
