--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -43,49 +42,42 @@
     <main>        <!-- Hero section -->
         <section>
             <h1>
-                Treat yourself or a loved one to our finest ingredients for a moment of pure delight!
+                Effective Solutions for Your Business
             </h1>
-            <button type="button">Buy now</button>
-            <button type="button">How it’s made</button>
-            <button type="button">
-                scroll down
-                <img src="./images/icons/arrow.svg" alt="Arrow down" width="22" height="22" />
-            </button>
-        </section>
+            <button type="button">Order Service</button>
+            </section>
         <!--  Section 1 -->
         <section>
-            <h2>Benefits of our chocolate</h2>
             <ul>
                 <li>
-                    <h3>Unsurpassed taste</h3>
+                    <h3>Strategy</h3>
                     <p>
-                        Crafted with the finest quality cocoa beans and a dedication to perfection, each bite
-                        is a decadent experience that simply cannot be matched. Savor the richness and
-                        complexity of our Unsurpassed Taste and discover a new level of chocolate bliss.
+                        Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
                 <li>
-                    <h3>Affordable price</h3>
+                    <h3>Punctuality</h3>
                     <p>
-                        Indulge in high-quality chocolate without breaking the bank with Simply Chocolate's
-                        selection of affordable treats. Enjoy mouth-watering truffles and velvety chocolate
-                        bars without sacrificing taste or quality. Browse our selection and indulge in
-                        affordable luxury today.
+                        Bring the key message to the brand's audience for the best price within the shortest possible time.
                     </p>
                 </li>
                 <li>
-                    <h3>Own production</h3>
+                    <h3>Diligence</h3>
                     <p>
-                        We take pride in our own production process, ensuring that every step is carefully
-                        crafted to perfection. From selecting the finest ingredients to handcrafting each
-                        piece, our attention to detail is evident in every bite.
+                        Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
+                    </p>
+                </li>
+                <li>
+                    <h3>Technologies</h3>
+                    <p>
+                        Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                     </p>
                 </li>
             </ul>
         </section>
         <!-- Section 2 -->
         <section>
-            <h2>It all adds up to one exceptional <span>taste</span> sensation</h2>
+            <h2>What are we doing</h2>
             <ul>
                 <li>
                     <img src="./images/ingridients/img-1.png" alt="MILK CHOCOLATE" width="214" height="160" />
@@ -250,5 +242,4 @@
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
-
 </html>
