--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Some text..." />
     <title>Studio</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="./images/icons/logo.svg" type="image/svg" />
-</head>
+    </head>
 
-<body>
+    <body>
     <!-- Header -->
     <header id="home">
         <nav>
@@ -39,7 +39,9 @@
             </ul>
         </address>
     </header>
-    <main>        <!-- Hero section -->
+    
+    <main>        
+        <!-- Hero section -->
         <section>
             <h1>
                 Effective Solutions for Your Business
@@ -80,8 +82,7 @@
             <h2>What are we doing</h2>
             <ul>
                 <li>
-                    <img src="./images/ingridients/img-1.png" alt="MILK CHOCOLATE" width="214" height="160" />
-                    <h3>MILK CHOCOLATE</h3>
+                    <img src="./images/ingridients/img-1.png" alt="MILK CHOCOLATE" width="360" height="300" />
                 </li>
                 <li>
                     <img src="./images/ingridients/img-2.png" alt="MILK" width="214" height="160" />
@@ -241,5 +242,5 @@
         </a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
-</body>
+    </body>
 </html>
