Ver 0.6 html updated Homework 1
Ver 0.6 html updated Homework 1

--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Some text..." />
+    <meta name="description" content="This is a web studio site..." />
     <title>Studio</title>
-    <!-- Favicon -->
-    <link rel="shortcut icon" href="./images/icons/logo.svg" type="image/svg" />
-    </head>
+    <!-- Add a favicon, if needed -->
+  </head>
 
-    <body>
+  <body>
     <!-- Header -->
     <header id="home">
         <nav>
@@ -42,14 +41,14 @@
     
     <main>        
         <!-- Hero section -->
-        <section>
+        <section id="hero">
             <h1>
                 Effective Solutions for Your Business
             </h1>
             <button type="button">Order Service</button>
             </section>
-        <!--  Section 1 -->
-        <section>
+        <!--  Advantages section -->
+        <section id="advantages">
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -77,162 +76,46 @@
                 </li>
             </ul>
         </section>
-        <!-- Section 2 -->
-        <section>
-            <h2>What are we doing</h2>
+        <!-- What Are We Doing section -->
+        <section id="doing">
+            <h2>What Are We Doing</h2>
             <ul>
                 <li>
-                    <img src="./images/ingridients/img-1.png" alt="MILK CHOCOLATE" width="360" height="300" />
+                    <img src="./images/doing/image1.jpg" alt="Desktop version" width="360" height="300" />
                 </li>
                 <li>
-                    <img src="./images/ingridients/img-2.png" alt="MILK" width="214" height="160" />
-                    <h3>MILK</h3>
+                    <img src="./images/doing/image2.jpg" alt="Mobile version" width="360" height="300" />
                 </li>
                 <li>
-                    <img src="./images/ingridients/img-3.png" alt="NUTS" width="214" height="160" />
-                    <h3>NUTS</h3>
-                </li>
-                <li>
-                    <img src="./images/ingridients/img-4.png" alt="SEMI - SWEET CHOCOLATE" width="214" height="160" />
-                    <h3>SEMI - SWEET CHOCOLATE</h3>
-                </li>
-                <li>
-                    <img src="./images/ingridients/img-5.png" alt="CACAO" width="214" height="160" />
-                    <h3>CACAO</h3>
-                </li>
-                <li>
-                    <img src="./images/ingridients/img-6.png" alt="RASPBERRY" width="214" height="160" />
-                    <h3>RASPBERRY</h3>
-                </li>
-                <li>
-                    <img src="./images/ingridients/img-7.png" alt="COCONUT OIL" width="214" height="160" />
-                    <h3>COCONUT OIL</h3>
+                    <img src="./images/doing/image3.jpg" alt="Compatibility OR Laptop version" width="360" height="300" />
                 </li>
             </ul>
         </section>
-        <!-- Section 3 -->
-        <section id="made">
-            <h2>How it’s <span>made</span>?</h2>
-            <img src="./images/made/img.jpg" alt="Chocolate making process" widht="600" height="400" />
-            <h3>Try our chocolates today and discover the perfect balance of flavor</h3>
-            <ol>
-                <li>
-                    Heat the milk in a saucepan without bringing it to a boil. Add sugar and cocoa powder.
-                </li>
-                <li>At the same time, prepare a water bath. Melt the butter on it.</li>
-                <li>
-                    "Mix" the milk mixture and already liquid butter. Mix thoroughly with a silicone spatula
-                    so that the mass becomes uniform and silky.
-                </li>
-                <li>Heat the mixture over low heat, letting it barely boil.</li>
-                <li>
-                    Pour the chocolate into special containers (can be replaced with ice molds). Allow to
-                    cool and harden.
-                </li>
-            </ol>
-        </section>
-        <!-- Products section -->
-        <section>
-            <h2>Our <span>products</span></h2>
+        <!-- Our team section -->
+        <section id="team">
+            <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/products/img-1.jpg" alt="" width="230" height="201" />
-                    <h3>Orange </h3>
-                    <p>Dark chocolate</p>
-                    <p>45 UAH</p>
+                    <img src="./images/team/image1.jpg" alt="Mark Guerrero" width="264" height="260" />
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/products/img-2.jpg" alt="" width="230" height="201" />
-                    <h3>Apple&Cranberry</h3>
-                    <p>Milk chocolate</p>
-                    <p>50 UAH</p>
+                    <img src="./images/team/image2.jpg" alt="Tom Ford" width="264" height="260" />
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/products/img-3.jpg" alt="" width="230" height="201" />
-                    <h3>Lime&Sea salt</h3>
-                    <p>Dark chocolate</p>
-                    <p>66 UAH</p>
+                    <img src="./images/team/image3.jpg" alt="Camila Garcia" width="264" height="260" />
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/products/img-4.jpg" alt="" width="230" height="201" />
-                    <h3>Pineapple</h3>
-                    <p>Dark chocolate</p>
-                    <p>54 UAH</p>
-                </li>
-                <li>
-                    <img src="./images/products/img-5.jpg" alt="" width="230" height="201" />
-                    <h3>Classic</h3>
-                    <p>Milk chocolate</p>
-                    <p>45 UAH</p>
-                </li>
-                <li>
-                    <img src="./images/products/img-6.jpg" alt="" width="230" height="201" />
-                    <h3>Honey</h3>
-                    <p>Milk chocolate</p>
-                    <p>50 UAH</p>
-                </li>
-                <li>
-                    <img src="./images/products/img-7.jpg" alt="" width="230" height="201" />
-                    <h3>Roasted fruits</h3>
-                    <p>Dark chocolate</p>
-                    <p>66 UAH</p>
-                </li>
-                <li>
-                    <img src="./images/products/img-8.jpg" alt="" width="230" height="201" />
-                    <h3>Classic</h3>
-                    <p>White chocolate</p>
-                    <p>54 UAH</p>
+                    <img src="./images/team/image4.jpg" alt="Daniel Wilson" width="264" height="260" />
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
                 </li>
             </ul>
-        </section>
-        <!-- Bestsellers section -->
-        <section>
-            <h2><span>Top</span> sellers</h2>
-            <ul>
-                <li>
-                    <img src="./images/bestsellers/img-1.jpg" alt="" width="368" height="464" />
-                    <h3>CHOCOLATE WITH NUTS</h3>
-                </li>
-                <li>
-                    <img src="./images/bestsellers/img-2.jpg" alt="" width="368" height="464" />
-                    <h3>CHOCOLATE WITH FRUITS</h3>
-                </li>
-                <li>
-                    <img src="./images/bestsellers/img-3.jpg" alt="" width="368" height="464" />
-                    <h3>DARK CHOCOLATE</h3>
-                </li>
-            </ul>
-        </section>
-        <!-- Reviews section -->
-        <section id="reviews">
-            <h2><span>Chocolate</span> is loved</h2>
-            <ul>
-                <li>
-                    <img src="./images/reviews/img-1.png" alt="Victoria Dobrzhanska" width="80" height="80" />
-                    <h3>Victoria Dobrzhanska</h3>
-                    <p>
-                        I love this chocolate bar. Perfect combination of light crispy wafer, covered in a
-                        thin layer chocolate.
-                    </p>
-                </li>
-                <li>
-                    <img src="./images/reviews/img-2.png" alt="Nazar Babenko" width="80" height="80" />
-                    <h3>Nazar Babenko</h3>
-                    <p>
-                        This chocolate confection is a delight! A delight! The wafer is light and crisp, the
-                        hazelnut cream is smooth, and the chocolate is good.
-                    </p>
-                </li>
-                <li>
-                    <img src="./images/reviews/img-3.png" alt="Olena Kampusch" width="80" height="80" />
-                    <h3>Olena Kampusch</h3>
-                    <p>
-                        Chocolate is a family favourite treat. Love the delicious smooth chocolate and the
-                        creaminess inside. The wafer is soft but crunchy.
-                    </p>
-                </li>
-            </ul>
-            <button type="button">Leave a review</button>
         </section>
     </main>
     <!-- Footer -->
@@ -242,5 +125,5 @@
         </a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
-    </body>
+  </body>
 </html>
