--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="This is a web studio site..." />
     <title>Studio</title>
-    <!-- Add a favicon, if needed -->
+    <!-- Favicon will be added, if needed -->
   </head>
 
   <body>
