--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <!-- Header -->
     <header id="home">
         <nav>
-            <a href="">
-                <span>WEB</span>STUDIO
+            <a href="./index.html">
+                WebStudio
             </a>
             <ul>
                 <li>
@@ -40,15 +40,16 @@
     </header>
     
     <main>        
-        <!-- Hero section -->
+        <!-- Hero section 1 -->
         <section id="hero">
             <h1>
                 Effective Solutions for Your Business
             </h1>
             <button type="button">Order Service</button>
             </section>
-        <!--  Advantages section -->
+        <!--  Advantages section 2 -->
         <section id="advantages">
+            <h2>Our advantages will be hidden</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -78,7 +79,7 @@
         </section>
         <!-- What Are We Doing section -->
         <section id="doing">
-            <h2>What Are We Doing</h2>
+            <h2>What are we doing</h2>
             <ul>
                 <li>
                     <img src="./images/doing/image1.jpg" alt="Desktop version" width="360" height="300" />
@@ -120,8 +121,8 @@
     </main>
     <!-- Footer -->
     <footer>
-        <a href="">
-            <span>WEB</span>STUDIO
+        <a href="./index.html">
+            WebStudio
         </a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
